# py-portainer-api

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml
portainer/: __init__.py  const.py  dockerContainer.py  endpoint.py  exceptions.py  portainer.py
script/: setup  setup.sh
scripts/: setup
src/portainer/: __init__.py  const.py  docker_container.py  endpoint.py  exceptions.py  portainer.py
tests/: __init__.py  confest.py  test.py  test_portainer.py  testing.py
